--- a/app/styles/flash_messages.css
+++ b/app/styles/flash_messages.css
@@ -71,29 +71,28 @@
 .flash-message-sticky {
   animation: flash-bounce 4s infinite;
   animation-delay: 3s;
-  @at-root {
-    /* would normally put this in animations.scss - but this is specific to sticky flash messages since it has blank keyframes for a repeating delay */
-    @keyframes flash-bounce {
-      /* stylelint-disable selector-list-comma-newline-after */
-      0%, 5%, 13.25%, 20%, 25% {
-        transform: translate3d(0, 0, 0);
-        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-      }
+}
 
-      10%, 10.75% {
-        transform: translate3d(0, -30px, 0);
-        animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-      }
-
-      17.5% {
-        transform: translate3d(0, -15px, 0);
-        animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
-      }
-
-      22.5% {
-        transform: translate3d(0, -4px, 0);
-      }
-      /* stylelint-enable selector-list-comma-newline-after */
-    }
+/* would normally put this in animations.scss - but this is specific to sticky flash messages since it has blank keyframes for a repeating delay */
+@keyframes flash-bounce {
+  /* stylelint-disable selector-list-comma-newline-after */
+  0%, 5%, 13.25%, 20%, 25% {
+    transform: translate3d(0, 0, 0);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
   }
+
+  10%, 10.75% {
+    transform: translate3d(0, -30px, 0);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+  }
+
+  17.5% {
+    transform: translate3d(0, -15px, 0);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+  }
+
+  22.5% {
+    transform: translate3d(0, -4px, 0);
+  }
+  /* stylelint-enable selector-list-comma-newline-after */
 }
